[project]
name = "manga-recommendation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "qdrant-client>=1.11.0",
    "langchain-tavily>=0.1.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "nest-asyncio>=1.5.0",
    "pandas>=2.3.1",
]
